fix z-index

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -33,6 +33,7 @@
     top: 100%;
     right: 0;
     left: 0;
+    z-index: 10;
     background-color: $color-light;
     visibility: hidden;
     opacity: 0;
